[package]
name = "Arpeggio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git" }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus.git" }
dirs = "5.0.1"
serde = "1.0.193"
serde_json = "1.0.108"
